Use bearer tokens instead of ID when sending data to web-client, this adds security
